--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,11 @@
+* {
+  box-sizing: border-box;
+  font-family: 'Courier New', Courier, monospace
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
 }
+
