--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: 'Courier New', Courier, monospace
+  font-family: fantasy;
 }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: fantasy;
 }
 
