--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -2,10 +2,19 @@ img {
     width: 80%;
     /* height: 100%; */
 }
+.side-info-holder {
+    display: flex;
+    flex-flow: column;
+    height: 100%;
+    overflow: auto;
+    margin-top: auto 0;
+}
 .side-info-block {
-    /* background-color: black; */
-    border-color: black;
-    /* height: 100%; */
+    /* display: flex;
+    flex-flow: column; */
+    align-items: center;
+    justify-content: start;
+    overflow: auto;
 }
 .card-div {
     text-align: center;
@@ -15,7 +24,12 @@ img {
     overflow: auto;
 }
 .card-title {
-    font-size: 18pt
+    font-size: 18pt;
+    font-family: 'Roboto', sans-serif;
+}
+.excerpt {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 15pt;
 }
 .fav-div {
     color: gold;
