columns resizing dynamically on click, real news cards populating on click, not yet with correct info

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -5,7 +5,8 @@
     color: white;
 }
 .main {
-    background-image: url("/Assets/Images/chalkboard.jpg")
+    background-image: url("/Assets/Images/chalkboard.jpg");
+    width: 100vw;
 }
 .title {
     text-align: center;
